# dbtfmt

./: pyproject.toml
dbtfmt/: index.py
tests/: test_index.py
tests/sql_files/: simple.sql  simple_string.sql  string_newlines.sql
