[tool.poetry]
name = "dbtfmt"
version = "0.1.0"
description = "A deterministic code formatted for dbt sql files."
authors = ["Mike Kunc <mjkunc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
